[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Back_Up.png" type="Texture" id=1]
[ext_resource path="res://UI/StatSection.gd" type="Script" id=2]
[ext_resource path="res://Resources/Border.png" type="Texture" id=3]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=4]

[node name="StatSection" type="Control"]
margin_right = 158.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.0901961 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
text = "Health"
align = 1
uppercase = true

[node name="CostLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 35.0
text = "Cost: 9999"
align = 1
uppercase = true

[node name="LowerContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -17.0
rect_min_size = Vector2( 0, 17 )
rect_pivot_offset = Vector2( 0, 1 )

[node name="ReduceButton" type="TextureButton" parent="LowerContainer"]
margin_right = 16.0
margin_bottom = 17.0
texture_normal = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="LowerContainer"]
margin_left = 20.0
margin_right = 138.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 2
value = 75.0

[node name="IncreaseButton" type="TextureButton" parent="LowerContainer"]
margin_left = 142.0
margin_right = 158.0
margin_bottom = 17.0
texture_normal = ExtResource( 1 )

[node name="SelectionOutline" type="NinePatchRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
